# smart-assistant

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
scripts/: download_models.py
src/: config.py  main.py
src/services/: asr.py  diarization.py  llm.py  memory.py  pipeline.py  summarizer.py  tools.py  tts.py  vad.py
src/static/: app.js  index.html  style.css
src/websocket/: handler.py
